@@ -1,5 +1,6 @@
 package com.final_team4.finalbe.trend.service;
 
+import com.final_team4.finalbe.trend.domain.TrendSnsType;
 import com.final_team4.finalbe.trend.dto.*;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
@@ -21,7 +22,7 @@ class TrendServiceTest {
     private TrendCreateRequestDto createRequestDto(Long categoryId,
                                              String keyword,
                                              Long searchVolume,
-                                             String snsType) {
+                                             TrendSnsType snsType) {
         return TrendCreateRequestDto.builder()
                 .categoryId(categoryId)
                 .keyword(keyword)
@@ -34,45 +35,65 @@ class TrendServiceTest {
     @Test
     void createTrends() {
         // given
-        TrendCreateRequestDto requestDto = createRequestDto(1L, "test", 500L, "X");
+        TrendCreateRequestDto requestDto = createRequestDto(1L, "test", 500L, TrendSnsType.X);
 
         // when
         List<TrendCreateResponseDto> responses = trendService.createTrends(List.of(requestDto));
 
         // then
-        TrendCreateResponseDto response = responses.get(0);
+        TrendCreateResponseDto response = responses.getFirst();
         assertThat(response.getId()).isNotNull();
         assertThat(response.getCategoryId()).isEqualTo(1L);
         assertThat(response.getKeyword()).isEqualTo("test");
         assertThat(response.getSearchVolume()).isEqualTo(500L);
-        assertThat(response.getSnsType()).isEqualTo("X");
+        assertThat(response.getSnsType()).isEqualTo(TrendSnsType.X);
     }
 
     @DisplayName("인기검색어 목록 조회_성공")
     @Test
     void getTrends() {
         // given
-        TrendCreateRequestDto first = createRequestDto(1L, "keyword-1", 500L, "YOUTUBE");
-        TrendCreateRequestDto second = createRequestDto(2L, "keyword-2", 700L, "INSTAGRAM");
-        TrendCreateRequestDto third = createRequestDto(1L, "keyword-3", 900L, "TIKTOK");
+        long initialTotalCount = trendService.getTrends(0, 1, null).getTotalCount();
+        long initialInstagramCount = trendService.getTrends(0, 1, TrendSnsType.INSTAGRAM).getTotalCount();
+        TrendCreateRequestDto first = createRequestDto(1L, "keyword-1", 500L, TrendSnsType.GOOGLE);
+        TrendCreateRequestDto second = createRequestDto(2L, "keyword-2", 700L, TrendSnsType.INSTAGRAM);
+        TrendCreateRequestDto third = createRequestDto(1L, "keyword-3", 900L, TrendSnsType.X);
         trendService.createTrends(List.of(first, second, third));
 
         // when
-        List<TrendResponseDto> firstPage = trendService.getTrends(0, 2);
-        List<TrendResponseDto> secondPage = trendService.getTrends(1, 2);
+        TrendListResponseDto firstPage = trendService.getTrends(0, 2, null);
+        TrendListResponseDto secondPage = trendService.getTrends(1, 2, null);
+        int aggregatedSize = (int) Math.min(Integer.MAX_VALUE, initialTotalCount + 3);
+        TrendListResponseDto aggregated = trendService.getTrends(0, aggregatedSize, null);
 
         // then
-        assertThat(firstPage)
-                .hasSize(2)
-                .extracting(TrendResponseDto::getKeyword)
-                .containsExactly(third.getKeyword(), second.getKeyword());
+        assertThat(firstPage.getItems()).hasSizeLessThanOrEqualTo(2);
+        assertThat(secondPage.getItems()).hasSizeLessThanOrEqualTo(2);
 
-        assertThat(secondPage)
-                .isNotEmpty()
+        assertThat(aggregated.getItems())
+                .extracting(TrendResponseDto::getKeyword)
+                .contains(first.getKeyword(), second.getKeyword(), third.getKeyword());
+
+        assertThat(aggregated.getItems())
+                .filteredOn(trend -> trend.getKeyword().equals(first.getKeyword()))
                 .first()
-                .satisfies(trend -> {
-                    assertThat(trend.getKeyword()).isEqualTo(first.getKeyword());
-                    assertThat(trend.getCategoryId()).isEqualTo(first.getCategoryId());
-                });
+                .satisfies(trend -> assertThat(trend.getCategoryName()).isNotBlank());
+
+        assertThat(aggregated.getItems())
+                .filteredOn(trend -> trend.getKeyword().equals(second.getKeyword()))
+                .first()
+                .satisfies(trend -> assertThat(trend.getCategoryName()).isNotBlank());
+
+        assertThat(firstPage.getTotalCount()).isEqualTo(initialTotalCount + 3);
+        assertThat(secondPage.getTotalCount()).isEqualTo(initialTotalCount + 3);
+
+        // snsType filtering
+        int instagramSize = (int) Math.min(Integer.MAX_VALUE, initialInstagramCount + 1);
+        TrendListResponseDto instagramOnly = trendService.getTrends(0, instagramSize, TrendSnsType.INSTAGRAM);
+        assertThat(instagramOnly.getItems())
+                .extracting(TrendResponseDto::getKeyword)
+                .contains(second.getKeyword());
+        assertThat(instagramOnly.getItems()).allSatisfy(trend -> assertThat(trend.getCategoryName()).isNotBlank());
+        assertThat(instagramOnly.getTotalCount()).isEqualTo(initialInstagramCount + 1);
     }
 }
